appId: ${MAESTRO_APP_ID}
name: "06 - Add a new button card from the home screen"
---
- tapOn:
    text: "戻る"
    optional: true
- tapOn:
    text: "戻る"
    optional: true
- tapOn: "ホーム\nタブ: 1/3"
- runFlow: _helpers/create_card_for_registered_graph.yaml
- assertVisible: ".*${PIXELA_E2E_CARD_NAME}.*"
- assertVisible: "カスタム"
- assertVisible: "+1"
